# kitten-tts-android

./: .gitattributes  .gitignore  README.md  build-espeak-ng.sh  settings.gradle.kts
.github/workflows/: build-release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: kitten_tts_micro_v0_8.onnx  kitten_tts_mini_v0_8.onnx  kitten_tts_nano_v0_8.onnx
app/src/main/assets/voices/: voices_micro.json  voices_mini.json  voices_nano.json
app/src/main/cpp/: CMakeLists.txt  espeak-bridge.c  espeak-bridge.h  espeak-jni.c
app/src/main/java/com/kittenml/tts/: MainActivity.kt
app/src/main/java/com/kittenml/tts/engine/: AudioPlayer.kt  EspeakBridge.kt  KittenTTSEngine.kt
app/src/main/java/com/kittenml/tts/model/: EngineState.kt  TTSModel.kt
app/src/main/java/com/kittenml/tts/ui/screen/: TTSScreen.kt  TTSViewModel.kt
app/src/main/java/com/kittenml/tts/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
